--- a/index.html
+++ b/index.html
@@ -47,6 +47,58 @@
           </footer>
 
         </article>
+        <h2> Making a funny table for practice parpus</h2>
+        <table >
+          <thead>
+            <tr>
+              <td>No</td>
+              <td>Name</td>
+              <td>Founder</td>
+              <td>Salary</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Bill Gates</td>
+              <td>Microsoft</td>
+              <td>$100000</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Steve Jobs</td>
+              <td>Apple</td>
+              <td>$150000</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Larry Page</td>
+              <td>Google</td>
+              <td>$200000</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Mark Zuckerberg</td>
+              <td>Facebook</td>
+              <td>$250000</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="4">They are Hard worker </td>
+            </tr>
+          </tfoot>
+        </table>
+        <h3>Tag analysis for table</h3>
+        <ul style="">
+          <li>Table = table</li>
+          <li>Table Head= thead</li>
+          <li>Table Body= tbody</li>
+          <li>Table Footer= tfoot</li>
+          <li>Table Row= tr</li>
+          <li>Table Data= td</li>
+          <li>Table Heading= th</li>
+        </ul>
 
     </main>
 
