--- a/form.html
+++ b/form.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tring to make a form</title>
     <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <ul>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="index.html">Index</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
