--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module-4 Practice</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="index.html">Index</a></li>
+            
             </ul>
         </nav>
     </header>
@@ -90,8 +90,8 @@
           </tfoot>
         </table>
         <h3>Tag analysis for table</h3>
-        <ul style="">
-          <li>Table = table</li>
+        <ul>
+          <li> Table = table</li>
           <li>Table Head= thead</li>
           <li>Table Body= tbody</li>
           <li>Table Footer= tfoot</li>
