--- a/form.html
+++ b/form.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="form.html">Form</a></li>
-                <li><a href="index.html">Index</a></li>
+                <li><a target="_blank" href="form.html">Form</a></li>
+                <li><a target="_blank" href="index.html">Index</a></li>
             </ul>
         </nav>
     </header>
